--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "postcss": "^8.4.18",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8"
+  },
+  "jest": {
+    "collectCoverageFrom": ["./src/utils/**"]
   }
 }
