--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-    - run: npm install
+    - run: npm install --force
     - run: npm run build
   test:
     needs: build
@@ -21,6 +21,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-    - run: npm install
+    - run: npm install --force
     - run: npm run build
     - run: npm run test
