--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
       with:
         node-version: 16.x
     - run: npm install --force
-    - run: npm run test
+    - run: npm run test-coverage
