--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "tailwindcss": "^3.1.8"
   },
   "jest": {
-    "collectCoverageFrom": ["./src/utils/**"]
+    "collectCoverageFrom": [
+      "./src/utils/**"
+    ]
   }
 }
